Updated Dark Theme in I_User

--- a/client/src/I_User/components/styles.css
+++ b/client/src/I_User/components/styles.css
@@ -5,3 +5,13 @@
 .margin-rg {
   margin-right: 80px;
 }
+body {
+  background: #212121;
+}
+body {
+  color: #eee;
+}
+
+.colApp {
+  background: #343a40;
+}
