--- a/client/src/P_User/components/main.css
+++ b/client/src/P_User/components/main.css
@@ -4,7 +4,45 @@
   /* background: #606972;
   color: white; */
 }
-.center {
+/* .center {
   text-align: center;
   margin-bottom: 30px;
+}
+.row {
+  margin: 0 -5px;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.column {
+  float: left;
+  width: 25%;
+  padding: 0 10px;
+}
+@media screen and (max-width: 600px) {
+  .column {
+    width: 50%;
+    display: inline-block;
+    margin-bottom: 20px;
+  }
+} */
+.containerr {
+  background-color: #08aeea;
+  background-image: linear-gradient(0deg, #08aeea 0%, #2af598 100%);
+}
+.center-align {
+  margin-left: 350px;
+}
+@media screen and (max-width: 400px) {
+  .column {
+    width: 50%;
+    display: inline-block;
+    margin-left: 18px;
+  }
+  .center-align {
+    margin-left: 30px;
+  }
 }
