--- a/client/src/routes/Location/styles.css
+++ b/client/src/routes/Location/styles.css
@@ -1,4 +1,12 @@
 .content {
-  background-color: #169db2;
-  max-height: 100vh;
+  height: 100vh;
+  background-color: #08aeea;
+  background-image: linear-gradient(0deg, #08aeea 0%, #2af598 100%);
+}
+@media screen and (max-width: 600px) {
+  .content {
+    height: 100%;
+    background-color: #08aeea;
+    background-image: linear-gradient(0deg, #08aeea 0%, #2af598 100%);
+  }
 }
