--- a/client/src/routes/Location/styles.css
+++ b/client/src/routes/Location/styles.css
@@ -1,5 +1,5 @@
 .content {
-  height: 100vh;
+  height: 100%;
   background-color: #08aeea;
   background-image: linear-gradient(0deg, #08aeea 0%, #2af598 100%);
 }
