--- a/client/src/I_User/components/styles.css
+++ b/client/src/I_User/components/styles.css
@@ -1,21 +1,20 @@
-@import url('https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css');
 .margin-bt {
-  margin-bottom: 50px;
+	margin-bottom: 50px;
 }
 .margin-rg {
-  margin-right: 80px;
+	margin-right: 80px;
 }
 body {
-  background: #212121;
+	background: #cfcdcd;
 }
 body {
-  color: #eee;
+	color: #eee;
 }
 
 .colApp {
-  background: #343a40;
+	background: #cfcdcd;
 }
 
 .customBtn {
-  height: 50px;
+	height: 50px;
 }
