Iuser issue resolved

--- a/client/src/components/style.css
+++ b/client/src/components/style.css
@@ -10,4 +10,12 @@
     font-size: 20px;
     margin-left: 0;
   }
+
+  .landmark {
+    margin-left: 40px;
+  }
+
+  .price {
+    margin-left: 85px;
+  }
 }
